--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <version.dropwizard>0.8.2</version.dropwizard>
     <version.httpcomponents>4.3</version.httpcomponents>
     <version.junit>4.11</version.junit>
+    <version.mockito>1.9.5</version.mockito>
   </properties>
 
   <dependencies>
@@ -24,11 +25,19 @@
       <artifactId>httpclient</artifactId>
       <version>${version.httpcomponents}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>    
+    
     <dependency>
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
       <version>${version.dropwizard}</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -36,6 +45,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${version.mockito}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
