Fixed warnings from JavaDocs, added -Werror to compiler settings

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,10 @@
           <source>1.7</source>
           <target>1.7</target>
           <encoding>UTF-8</encoding>
+          <compilerArguments>
+            <Werror />
+            <Xlint:all />
+          </compilerArguments>
         </configuration>
       </plugin>
 
@@ -170,7 +174,7 @@
           </execution>
         </executions>
       </plugin>
-
+      
     </plugins>
   </build>
 </project>
